--- a/resources/install-public/docker-compose.yml
+++ b/resources/install-public/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.9"
 services:
   mariadb:
     image: mariadb:latest
-    container_name: petrvs_db
+    # container_name: petrvs_db
     ports:
-      - "23306:3306"
+      - "33306:3306"
     volumes:
       - db_data:/var/lib/mysql      # Define um volume persistente para os dados do MariaDB
       - ./my.cnf:/etc/mysql/my.cnf  # Certifique-se que este arquivo está corretamente configurado
@@ -12,10 +12,10 @@ services:
       MYSQL_ROOT_PASSWORD: rootpgd   # Define a senha para o root
   petrvs_php:
     image: segescginf/pgdpetrvs:latest  # Substitua pela sua imagem real
-    container_name: petrvs_php
+    # container_name: petrvs_php
     ports:
-      - "280:80"
-      - "2443:443"
+      - "380:80"
+      - "3443:443"
     deploy:
       resources:
         limits:
@@ -26,7 +26,7 @@ services:
       - ./php.ini:/usr/local/etc/php/conf.d/custom-php.ini
   petrvs_queue:
     image: segescginf/pgdpetrvs:latest
-    container_name: petrvs_queue
+    # container_name: petrvs_queue
     environment:
       - TZ=America/Bahia
     command: ["/bin/bash", "-c", "mkdir -p /var/www/storage/logs && chown -R www-data:www-data /var/www/storage && chmod -R 775 /var/www/storage && supervisord -c /etc/supervisor/conf.d/horizon.conf"]
@@ -41,7 +41,7 @@ services:
     image: redis:alpine
     # container_name: petrvs_redis
     ports:
-      - "26379:6379"
+      - "36379:6379"
     volumes:
       - redis-data:/data
 volumes:
