--- a/resources/install-public/docker-compose.yml
+++ b/resources/install-public/docker-compose.yml
@@ -10,9 +10,12 @@ services:
       - ./my.cnf:/etc/mysql/my.cnf  # Certifique-se que este arquivo está corretamente configurado
     environment:
       MYSQL_ROOT_PASSWORD: rootpgd   # Define a senha para o root
+      TZ: America/Sao_Paulo
   petrvs_php:
     image: segescginf/pgdpetrvs:latest  # Substitua pela sua imagem real
     # container_name: petrvs_php
+    environment:
+      TZ: America/Sao_Paulo
     ports:
       - "380:80"
       - "3443:443"
@@ -22,24 +25,26 @@ services:
           cpus: '2.0'
           memory: 4048M
     volumes:
-      # - "./.env:/var/www/.env"
+      - "./.env:/var/www/.env"
       - ./php.ini:/usr/local/etc/php/conf.d/custom-php.ini
   petrvs_queue:
     image: segescginf/pgdpetrvs:latest
     # container_name: petrvs_queue
     environment:
-      - TZ=America/Bahia
+      TZ: America/Sao_Paulo
     command: ["/bin/bash", "-c", "mkdir -p /var/www/storage/logs && chown -R www-data:www-data /var/www/storage && chmod -R 775 /var/www/storage && supervisord -c /etc/supervisor/conf.d/horizon.conf"]
     depends_on:
       - petrvs_php
     volumes:
-      # - "./.env:/var/www/.env"
+      - "./.env:/var/www/.env"
       - ./php.ini:/usr/local/etc/php/conf.d/custom-php.ini
     stdin_open: true
     tty: true
   petrvs_redis:
     image: redis:alpine
     # container_name: petrvs_redis
+    environment:
+      TZ: America/Sao_Paulo
     ports:
       - "36379:6379"
     volumes:
