--- a/resources/install-public/docker-compose.yml
+++ b/resources/install-public/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       MYSQL_ROOT_PASSWORD: rootpgd   # Define a senha para o root
       TZ: America/Sao_Paulo
   petrvs_php:
-    image: segescginf/pgdpetrvs:latest  # Substitua pela sua imagem real
+    # image: segescginf/pgdpetrvs:latest  # Substitua pela sua imagem real
+    image: segescginf/pgdpetrvs:2.3.11 
     # container_name: petrvs_php
     ports:
       - "480:80"
@@ -26,7 +27,8 @@ services:
       - "./.env:/var/www/.env"
       - ./php.ini:/usr/local/etc/php/conf.d/custom-php.ini
   petrvs_queue:
-    image: segescginf/pgdpetrvs:latest
+    # image: segescginf/pgdpetrvs:latest
+    image: segescginf/pgdpetrvs:2.3.11
     # container_name: petrvs_queue
     environment:
       TZ: America/Sao_Paulo
