--- a/resources/install-public/docker-compose.yml
+++ b/resources/install-public/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   mariadb:
     image: mariadb:latest
-    container_name: petrvs_db
+    # container_name: petrvs_db
     ports:
       - "3306:3306"
     volumes:
@@ -10,25 +10,30 @@ services:
       - ./my.cnf:/etc/mysql/my.cnf  # Certifique-se que este arquivo está corretamente configurado
     environment:
       MYSQL_ROOT_PASSWORD: rootpgd   # Define a senha para o root
+       TZ: America/Sao_Paulo
   petrvs_php:
-    image: segescginf/pgdpetrvs:latest  # Substitua pela sua imagem real
-    container_name: petrvs_php
+    # image: segescginf/pgdpetrvs:latest  # Substitua pela sua imagem real
+    image: segescginf/pgdpetrvs:2.3.14
+    # container_name: petrvs_php
     ports:
       - "80:80"
-      - "443:443"
+      - "4443:443"
     deploy:
       resources:
         limits:
           cpus: '2.0'
           memory: 4048M
+    environment:
+      TZ: America/Sao_Paulo
     volumes:
       - "./.env:/var/www/.env"
       - ./php.ini:/usr/local/etc/php/conf.d/custom-php.ini
   petrvs_queue:
-    image: segescginf/pgdpetrvs:latest
-    container_name: petrvs_queue
+    # image: segescginf/pgdpetrvs:latest
+    image: segescginf/pgdpetrvs:2.3.14
+    # container_name: petrvs_queue
     environment:
-      - TZ=America/Bahia
+      TZ: America/Sao_Paulo
     command: ["/bin/bash", "-c", "mkdir -p /var/www/storage/logs && chown -R www-data:www-data /var/www/storage && chmod -R 775 /var/www/storage && supervisord -c /etc/supervisor/conf.d/horizon.conf"]
     depends_on:
       - petrvs_php
@@ -39,7 +44,9 @@ services:
     tty: true
   petrvs_redis:
     image: redis:alpine
-    container_name: petrvs_redis
+    # container_name: petrvs_redis
+    environment:
+      TZ: America/Sao_Paulo
     ports:
       - "6379:6379"
     volumes:
